package org.example;

public enum TransmissionRoute {
    DROPLETS,
    DIRECTCONTACT,
    VECTORBORNE,
    BODYFLUIDS,
    AIRBORNE,
    FOODANDWATER
}
